--- a/index.html
+++ b/index.html
@@ -58,45 +58,47 @@
         </div>
     </header>
 
-
     <main id="content">
+
         <section id="home">
-            <div class="shape"></div>
-            <div id="cta">
-                <h1 class="title">
-                    O sabor vai até <span>você</span>
-                </h1>
-                <p>description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem itaque saepe natus
-                    impedit nihil laboriosam distinctio cumque et quaerat? Cum ducimus iste tempore dignissimos
-                    perferendis quaerat! Quaerat officiis ipsum aliquam.
-                </p>
-            </div>
-            <div id="cta_buttons">
-                <a href="#" class="btn-default">
-                    ver cardápio
-                </a>
+            <div class="shape">
+                <div id="cta">
+                    <h1 class="title">
+                        O sabor que vai até <span> você </span>
+                    </h1>
+                    <p>description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem itaque saepe natus
+                        impedit nihil laboriosam distinctio cumque et quaerat? Cum ducimus iste tempore dignissimos
+                        perferendis quaerat! Quaerat officiis ipsum aliquam.
+                    </p>
+                </div>
+                <div id="cta_buttons">
+                    <a href="#" class="btn-default">
+                        ver cardápio
+                    </a>
 
-                <a href="tel:+9999999999" id="phone-btn">
-                    <button class="btn-default">
-                        <i class="fa-solid fa-phone"></i>
-                        (51) 999999999
-                    </button>
-                </a>
-            </div>
-            <div class="social-media-buttons">
-                <a href="#">
-                    <i class="fa-brands fa-whatsapp"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-facebook"></i>
-                </a>
-            </div>
+                    <a href="tel:+9999999999" id="phone-btn">
+                        <button class="btn-default">
+                            <i class="fa-solid fa-phone"></i>
+                        </button>
+                        (51) 9999-9999
+                    </a>
+                </div>
 
-            <div id="banner">
-                <img src="src/imgs/camisetas (9).jpg" alt="tomato">
+                <div class="social-media-buttons">
+                    <a href="#">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                </div>
+
+                <div id="banner">
+                    <img src="src/imgs/hero.png" alt="tomato">
+                </div>
             </div>
         </section>
 
