--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="src/CSS/style.css">
-    <link rel="stylesheet" href="src/CSS/header.css">
-    <link rel="stylesheet" href="src/CSS/home.css">
-    <link rel="stylesheet" href="src/CSS/menu.css">
-    <link rel="stylesheet" href="src/CSS/testimonials.css">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn-script.com/ajax/libs/jquery/3.7.1/jquery.js"></script>
 
     <title>Landing Page</title>
@@ -237,7 +234,7 @@
         </section>
 
         <section id="testimonials">
-            <img src="src/imgs/chef.png" id="testimonial_chef" alt="">
+            <img src="src/imgs/chef.png" id="testimonial_chef" alt="chef">
 
             <div id="testimonials_content">
                 <h2 class="section-subtitle">
@@ -294,6 +291,27 @@
             </div>
         </section>
     </main>
+    <footer>
+        <img src="src/imgs/wave (1).svg" alt="wave">
+
+        <div id="footer-items">
+            <div>
+                <span id="copy-right">&copy 2025</span>
+            </div>
+
+            <div class="social-media-buttons">
+                <a href="">
+                    <i class="fa-brands fa-whatsapp"></i>
+                </a>
+                <a href="">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
 
     <script src="src/javascript/script.js"></script>
 </body>
