--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="#home">início</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#home">cardápio</a>
+                    <a href="#menu">cardápio</a>
                 </li>
                 <li class="nav-item">
                     <a href="#testimonials">avaliação</a>
@@ -46,7 +46,7 @@
                     <a href="#home">início</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#home">cardápio</a>
+                    <a href="#menu">cardápio</a>
                 </li>
                 <li class="nav-item">
                     <a href="#testimonials">avaliação</a>
@@ -292,7 +292,7 @@
         </section>
     </main>
     <footer>
-        <img src="src/imgs/wave (1).svg" alt="wave">
+        <img src="src/imgs/wave.svg" alt="wave">
 
         <div id="footer-items">
             <div>
